[project]
name = "common"
version = "0.1.0"
description = ""
authors = [
    { name = "Zhang Yuhao", email = "zhangyuhao415@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "expression>=5.3.0",
    "tqdm>=4.66.6",
    "xarray>=2024.10.0",
    "torch",
    "torchvision",
    "imageio",
    "einops",
    "matplotlib",
    "ipdb",
    "jaxtyping",
    "omegaconf",
    "IPython",
    "gsplat",
    "plyfile",

    # use github version instead of pip version to enforce the compiling of cuda kernels during installation
    # add following to ~/.gitconfig to accelerate the repository cloning in China
    # [url "https://ghproxy.net/https://github.com/"]
    # insteadOf = https://github.com/
    "git+https://github.com/nerfstudio-project/gsplat.git"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# [tool.poetry]
# name = "common"
# version = "0.1.0"
# description = ""
# authors = ["Zhang Yuhao <zhangyuhao415@gmail.com>"]
# readme = "README.md"

# [tool.poetry.dependencies]
# python = "^3.10"
# expression = "^5.3.0"
# tqdm = "^4.66.6"
# xarray = "^2024.10.0"


# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"
